add some functions

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -273,3 +273,13 @@
         transform: scaleY(0);
     }
 }
+
+@keyframes loginsuccess{
+    0%{
+        transform: scale(1);
+    }
+
+    100%{
+        transform: scale(0);
+    }
+}
